--- a/MyCover/MyCover/appsettings.json
+++ b/MyCover/MyCover/appsettings.json
@@ -11,5 +11,8 @@
     "SecretKey": "VaibhavBhapkar",
     "Issuer": "https://localhost:44336/",
     "Audience": "https://localhost:44336/"
+  },
+  "ConnectionStrings": {
+    "MyCoverDatabase": "Server=AH;Database=MyCover;User Id=maituyen;Password=123456;"
   }
 }
