--- a/MyCover/MyCover/MyCover.csproj
+++ b/MyCover/MyCover/MyCover.csproj
@@ -7,6 +7,13 @@
   <ItemGroup>
     <PackageReference Include="jose-jwt" Version="2.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MyCover.Model\MyCover.Model.csproj" />
+    <ProjectReference Include="..\MyCover.Service\MyCover.Service.csproj" />
   </ItemGroup>
 
 
