update Account controller
Signed-off-by: Mai Tuyen <maituyen4496@gmail.com>

--- a/MyCover/MyCover/appsettings.json
+++ b/MyCover/MyCover/appsettings.json
@@ -8,9 +8,9 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "SecretKey": "VaibhavBhapkar",
-    "Issuer": "https://localhost:44336/",
-    "Audience": "https://localhost:44336/"
+    "SecretKey": "MaiTuyen1996@123",
+    "Issuer": "https://localhost:44352/",
+    "Audience": "https://localhost:44352/"
   },
   "ConnectionStrings": {
     "MyCoverDatabase": "Server=AH;Database=MyCover;User Id=maituyen;Password=123456;"
